Fix .hero numbers wrapping on smaller screens

--- a/less/school.less
+++ b/less/school.less
@@ -795,6 +795,7 @@ footer{
 }
 
 .hero-numbers{
+  text-align: center;
   margin-bottom: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid @support-gray;
@@ -803,6 +804,11 @@ footer{
   display: flex;
   align-items: center;
   flex-direction: column;
+
+  @media (max-width: 980px){
+    margin: 20px 0;
+    padding: 10px 0 20px;
+  }
 
   @media (min-width: 980px){
     font-size: @text-size-hero-numbers;
@@ -819,7 +825,7 @@ footer{
   }
 
   @media (max-width: 980px){
-    margin: 5px;
+    margin: 10px 5px;
 
     strong{
       font-size: @text-size-hero-numbers;
@@ -940,7 +946,7 @@ body div.slideshow-window * img{
   .slideshow-window{
     height: 100%;
   }
-  
+
   body div.slideshow-window * img{
     transform: translateY(0%);
   }
